fix. css변경 / 안쓰는 파일 삭제

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="css/nice-select.css" type="text/css" />
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/modaltest.css" type="text/css" />
   </head>
@@ -323,17 +322,10 @@
     <!-- 탑바 끝 -->
     <!-- Featured Section Begin -->
     <section class="featured-spad">
-      <!-- <div
-        class="hero__item set-bg"
-        style="display: flex; justify-content: center; align-items: center"
-        data-setbg="img/hero/pancake.jpg"
-      >
-        <div class="hero__text"> -->
       <div style="margin-bottom: 100px" class="menu-preference-container">
-        <h2 style="color: black; margin-top: 50px">TOGETHER EAT!</h2>
-        <a href="menu-subscribe.html" class="mainMenuBtn">메뉴 추천</a>
+        <h2 style="color: black; margin-top: 30px">오늘 뭐 먹을지 결정하셨나요?</h2>
         <a href="./preference.html" class="mainPreferBtn">선호도 조사</a>
-        <h2 style="color: black; margin-top: 30px">뭐 먹을지 고민이신가요?</h2>
+        <a href="menu-subscribe.html" class="mainMenuBtn">메뉴 추천</a>
       </div>
     </section>
     <footer class="footer spad">
@@ -406,7 +398,6 @@
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
