--- a/public/foodlist.html
+++ b/public/foodlist.html
@@ -29,6 +29,7 @@
 
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
 
   <body>
@@ -227,7 +228,7 @@
       </div>
     </div>
     <!-- 로그인 모달 끝 -->
-    <!-- 탑바 시작 -->
+ <!-- 탑바 시작 -->
     <header class="header">
       <div class="header__top">
         <div class="container">
@@ -334,18 +335,21 @@
           <div>
             <div class="dropdown">
             </div>
+        <div class="tooltip_wrap">
             <a href="#url" class="button_control2"><i class="fa fa-question-circle" aria-hidden="true"></i></a>
-          <div class="tooltip_layer2">메뉴 이름을 클릭하면 <br> 메뉴의 재료를 확인할 수 있습니다.</div>
+          <div class="tooltip_layer2">메뉴 이름을 클릭하면 <br> 메뉴의 재료를 확인할 수 있습니다.<br>내 주변 식당을 클릭하면<br>근처의 맛집을 추천받습니다.</div>
+        </div>
         </div>
             <form onsubmit="return false" action="#"  style="text-align: center">
               <input  type="text" id="searchInput" placeholder="검색어를 입력하세요" onkeydown="handleEnter(event)">
               <button class="foodBtn" type="button" onclick="search()">검색</button> 
             </form>
             <br></br>
-            
+            <div class="ButtonAdmin">
             <form action="#" id="adminButton" style="display: none;" >
             <button class="foodBtn" id="moveAdmin" onclick="movePage()" >관리자 버튼</button>
             </form>
+          </div>
             <section class="featured spad">
               <div class="container">
                   <div class="row">
